<resources>
    <string name="app_name">TP01</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_password_again">Enter your password again</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="connexion">Connexion</string>
    <string name="modifier_le_profile">Modifier le profile</string>
    <string name="supprimer_le_profile">Supprimer le profile</string>
    <string name="dumy_logo_image">Dumy logo image</string>
    <string name="inscription">Inscription</string>
</resources>
