<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/inputEmailLogin"
            android:hint="@string/enter_your_email"
            android:textColorHint="#757575"
            android:autofillHints="" android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.805"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.308"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" android:layout_marginTop="40dp"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.096"/>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblPassword"
            app:layout_constraintBottom_toBottomOf="@+id/inputPasswordLogin" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.586"
            app:layout_constraintTop_toTopOf="@+id/inputPasswordLogin"
            app:layout_constraintEnd_toStartOf="@+id/inputPasswordLogin" app:layout_constraintHorizontal_bias="0.521"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/inputPasswordLogin"
            android:layout_marginTop="80dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.489" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/inputEmailLogin"
            app:layout_constraintHorizontal_bias="0.328"
            app:layout_constraintTop_toTopOf="@+id/inputEmailLogin"
            app:layout_constraintBottom_toBottomOf="@+id/inputEmailLogin"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/inputPasswordLogin"
            android:hint="@string/enter_your_password"
            android:textColorHint="#757575"
            android:autofillHints="" android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmailLogin" android:layout_marginTop="64dp"
            app:layout_constraintHorizontal_bias="0.8" app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
