<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connexion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintVertical_bias="0.017" android:id="@+id/lblConnexionRedirection"
            android:layout_marginTop="16dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imageView"
            android:contentDescription="@string/dumy_logo_image" android:layout_marginEnd="142dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="111dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="141dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="492dp" tools:ignore="ImageContrastCheck"/>
    <TextView
            android:text="@string/d_connexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblDeconnexionRedirection"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp" android:layout_marginStart="209dp"
            app:layout_constraintStart_toEndOf="@+id/lblConnexionRedirection" android:layout_marginEnd="39dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="324dp"
            app:layout_constraintBottom_toTopOf="@+id/lblSuppressionProfile"/>
    <TextView
            android:text="@string/modifier_le_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblModificationProfile"
            android:layout_marginTop="317dp"
            app:layout_constraintTop_toBottomOf="@+id/lblConnexionRedirection"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="341dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="31dp"
            android:layout_marginEnd="270dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/supprimer_le_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblSuppressionProfile"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="341dp" android:layout_marginEnd="19dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="128dp"
            app:layout_constraintStart_toEndOf="@+id/lblModificationProfile"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/inscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblInscription"
            android:layout_marginEnd="169dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="176dp"
            android:layout_marginTop="76dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="397dp"/>
    <Button
            android:text="Auth Firebase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnInscriptionFirebaseAuth"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/lblInscription"/>

</androidx.constraintlayout.widget.ConstraintLayout>
