<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <EditText
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/inputEmailSignUp"
            android:hint="@string/enter_your_email" android:minHeight="48dp"
            android:textColorHint="#757575" android:autofillHints=""
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintTop_toBottomOf="@+id/inputFirstName" android:layout_marginTop="60dp"
            app:layout_constraintBottom_toTopOf="@+id/inputPhoneNumber" app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="222dp"
            android:layout_height="48dp"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/inputPhoneNumber"
            android:hint="@string/enter_your_phone_number"
            android:minHeight="48dp" android:autofillHints="" android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintBottom_toTopOf="@+id/inputPasswordTwo" android:layout_marginBottom="124dp"/>
    <EditText
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/inputPasswordOne"
            android:hint="@string/enter_your_password" android:minHeight="48dp"
            android:autofillHints="" android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintTop_toBottomOf="@+id/inputPhoneNumber" android:layout_marginTop="48dp"/>
    <EditText
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/inputPasswordTwo"
            android:minHeight="48dp"
            android:hint="@string/enter_your_password_again"
            android:autofillHints="" android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="168dp"/>
    <EditText
            android:layout_width="100dp"
            android:layout_height="57dp"
            android:inputType="textPersonName"
            android:text="@string/last_name"
            android:ems="10"
            android:id="@+id/inputLastName"
            android:autofillHints="" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="80dp"
            app:layout_constraintTop_toTopOf="@+id/inputFirstName"
            app:layout_constraintBottom_toBottomOf="@+id/inputFirstName"
            app:layout_constraintStart_toEndOf="@+id/inputFirstName" app:layout_constraintHorizontal_bias="0.594"
            app:layout_constraintVertical_bias="1.0"/>
    <EditText
            android:layout_width="100dp"
            android:layout_height="57dp"
            android:inputType="textPersonName"
            android:text="@string/first_name"
            android:ems="10"
            android:id="@+id/inputFirstName"
            android:autofillHints="" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.302"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/lblSignUP"
            app:layout_constraintVertical_bias="0.071"/>
    <TextView
            android:text="@string/sign_up"
            android:layout_width="222dp"
            android:layout_height="wrap_content" android:id="@+id/lblSignUP"
            android:textAlignment="center" android:textStyle="bold"
            android:textAllCaps="true" android:textSize="48sp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="36dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnSignUpAction"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="76dp" app:layout_constraintTop_toBottomOf="@+id/inputPasswordTwo"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
            tools:ignore="DuplicateSpeakableTextCheck"/>
</androidx.constraintlayout.widget.ConstraintLayout>
